button fix, moved collapse button over, tried scrollbar fix

--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -12,13 +12,16 @@
 }
 
 .cal-collapse-icon {
-  float: left;
-  cursor: pointer;
+  position: absolute;
+  top: 0px;
+  left: 4px;
   color: var(--main-purple-5);
 }
 
 .search-collapse-icon {
-  float: right;
+  position: absolute;
+  top: 0px;
+  right: 4px;
   color: var(--main-purple-5);
 }
 
